# stock

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  stock.pro
.github/workflows/: codeql-analysis.yml
.reuse/: dep5
src/: CMakeLists.txt
src/desktop/: CMakeLists.txt  amount.cpp  amount.hpp  by_place_model.cpp  by_place_model.hpp  by_place_sort_model.cpp  by_place_sort_model.hpp  by_place_view.cpp  by_place_view.hpp  by_product_model.cpp  by_product_model.hpp  by_product_sort_model.cpp  by_product_sort_model.hpp  by_product_view.cpp  by_product_view.hpp  cfgfile_generator_path.in  db.cpp  db.hpp  db_signals.cpp  db_signals.hpp  edit_desc.cpp  edit_desc.hpp  edit_desc.ui  license_dialog.cpp  license_dialog.hpp  license_dialog.ui  main.cpp  mainwindow.cpp  mainwindow.hpp  options.cpp  options.hpp  options.ui  product.cpp  product.hpp  product.ui  rename.cpp  rename.hpp  rename.ui  resources.qrc  server.cpp  (+7 more)
src/mobile/: CMakeLists.txt  camera_settings.cpp  camera_settings.hpp  cfg_file.cpp  cfg_file.hpp  frames.cpp  frames.hpp  image.cpp  image.hpp  list_model.cpp  list_model.hpp  main.cpp  network.cpp  network.hpp  qml_cpp_bridge.cpp  qml_cpp_bridge.hpp
src/mobile/qml/: Actions.qml  Bookmark.qml  Busy.qml  CameraSettings.qml  CameraView.qml  Change.qml  Connect.qml  Licenses.qml  Message.qml  Search.qml  SearchResult.qml  main.qml
src/mobile/tr/: stock_ru.ts
src/shared/: buffer.cpp  buffer.hpp  constants.hpp  datagrams.cpp  datagrams.hpp  exceptions.cpp  exceptions.hpp  messages.cfgfile  tcp_socket.cpp  tcp_socket.hpp
stock/: stock.pro
stock/desktop/: CMakeLists.txt  amount.cpp  amount.hpp  amount.ui  app.rc  by_place_model.cpp  by_place_model.hpp  by_place_sort_model.cpp  by_place_sort_model.hpp  by_place_view.cpp  by_place_view.hpp  by_product_model.cpp  by_product_model.hpp  by_product_sort_model.cpp  by_product_sort_model.hpp  by_product_view.cpp  by_product_view.hpp  config.cfgfile  db.cpp  db.hpp  db_signals.cpp  db_signals.hpp  desktop.pro  edit_desc.cpp  edit_desc.hpp  license_dialog.cpp  license_dialog.hpp  license_dialog.ui  main.cpp  mainwindow.cpp  mainwindow.hpp  options.cpp  options.hpp  options.ui  product.cpp  product.hpp  product.ui  rename.cpp  rename.hpp  rename.ui  (+9 more)
stock/mobile/: CMakeLists.txt  camera.cfgfile  camera_settings.cpp  camera_settings.hpp  cfg_file.cpp  cfg_file.hpp  config.cfgfile  frames.cpp  frames.hpp  image.cpp  image.hpp  list_model.cpp  list_model.hpp  main.cpp  mobile.pro  network.cpp  network.hpp  qml_cpp_bridge.cpp  qml_cpp_bridge.hpp  qml_cpp_signals.cpp  qml_cpp_signals.hpp  resources.qrc
stock/mobile/android/: AndroidManifest.xml
stock/mobile/android/assets/: stock_ru.qm
stock/mobile/qml/: Actions.qml  Busy.qml  CameraSettings.qml  CameraView.qml  Change.qml  Connect.qml  Licenses.qml  Message.qml  Search.qml  SearchResult.qml  main.qml
stock/mobile/tr/: stock_ru.ts
stock/shared/: buffer.cpp  buffer.hpp  constants.hpp  datagrams.cpp  datagrams.hpp  exceptions.cpp  exceptions.hpp  messages.cfgfile  shared.pri  tcp_socket.cpp  tcp_socket.hpp
tr/: stock_ru.qm  stock_ru.ts
